--- a/Comic-Book-Gallery/Views/_ViewImports.cshtml
+++ b/Comic-Book-Gallery/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using Comic_Book_Gallery
-@using Comic_Book_Gallery.Models
+﻿@using ComicBookGallery
+@using ComicBookGallery.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
