--- a/Comic-Book-Gallery/Views/ComicBook/Detail.cshtml
+++ b/Comic-Book-Gallery/Views/ComicBook/Detail.cshtml
@@ -1,6 +1,7 @@
 ﻿@model ComicBookGallery.Models.ComicBook
 @{
     Layout = "_Layout";
+    ViewBag.ShowBackBar = true;
 }
 
 <h2>@Model.DisplayText</h2>
